# driver-awareness

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  install.sh  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
awareness_detector/: CMakeLists.txt  README.md  package.xml  setup.py
awareness_detector/config/: awareness_model_config.yaml  carla_awareness_model_config.yaml
awareness_detector/launch/: awareness_model.launch  carla_awareness_model.launch  evaluation.launch  evaluation_rosbag.launch  extract_frames_rosbag.launch
awareness_detector/scenarios/: LeftTurnTwoVehicles.py  LeftTurnTwoVehicles.xml  ManeuverOppositeDirectionPedestrian.py  ManeuverOppositeDirectionPedestrian.xml  RightTurn.py  RightTurn.xml
awareness_detector/scripts/: awareness_model.py  carla_awareness_model.py
awareness_detector/src/awareness_detector/: __init__.py  geometry.py  sa.py  view.py
awareness_detector/test/: test_geometry.py  test_sa.py  test_view.py  testrunner.py
awareness_detector/util/: .gitignore  bag_cutter.py  extract_sa.py  plot_sa.py  run_roi_prediction_bdda_model.sh  run_roi_prediction_single_model.sh  sa_evaluation.ipynb  scenario_auto_evaluation.py
docker/: Dockerfile  entrypoint.sh
driver_awareness_msgs/: CMakeLists.txt  package.xml
driver_awareness_msgs/msg/: Gaze.msg  GazeArray.msg  ROI.msg  ROIArray.msg  SA.msg
gaze_detector/: CMakeLists.txt  README.md  package.xml  setup.py
gaze_detector/config/: calibration_image_circles.csv  remote_calibration_config.yaml
gaze_detector/launch/: gaze_publisher.launch  gaze_visualizer.launch  remote_calibration.launch
gaze_detector/scripts/: gaze_publisher.py  gaze_visualizer.py  remote_calibration.py
gaze_detector/src/gaze_detector/: __init__.py  files.py  geometry.py  pupil.py
gaze_detector/test/: test_files.py  test_geometry.py  test_pupil.py  testrunner.py
