<package format="2">
    <name>driver_awareness_msgs</name>
    <version>0.0.0</version>
    <description>The data collector messages package</description>
    <maintainer email="name.surname@tum.de">Markus Hofbauer</maintainer>
    <author email="name.surname@tum.de">Markus Hofbauer</author>
    <license>MIT</license>
    <url type="website">https://github.com/hofbi/driver-awareness</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>opencv_apps</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>